Massive refactor of Flight.java. Extract a few methods and delete redundant or dead code to bring down line count by 150. Still need another 100 to get it below being 2000 lines